@@ -10,6 +10,8 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_02-dev
 
+allow $r->finfo to be modified
+
 if Perl is linked with -lpthread, then httpd needs to be linked with
 -lpthread, make sure that happens with USE_DSO=1, warn if USE_APXS=1
 
